[package]
name = "pass"
version = "0.1.0"
authors = ["Anton Potapov <protestandprotect52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.3.0"
rsa-export = "0.3.2"
rand = "0.7.0"
clipboard = "0.5.0"
tindercrypt = "0.3.0"
rpassword = "5.0.1"
